--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <label for="userEmail">Seu e-mail:</label>
         <input type="email" id="userEmail" name="userEmail" required>
         <label for="schoolName">Nome da escola:</label>
-        <input type="text" id="schoolName" name="schoolName" required placeholder="Ex.: Escola Alpha">
+        <input type="text" id="schoolName" name="schoolName" required placeholder="Ex.: Mater Dei">
       </fieldset>
       <fieldset>
         <legend>Pontuações e Fotos</legend>
