--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nova Avaliação</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Bibliotecas para geração de PDF e CSV -->
+  <!-- Biblioteca para geração de PDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
   <header>
@@ -25,7 +24,7 @@
         <label for="userEmail">Seu e-mail:</label>
         <input type="email" id="userEmail" name="userEmail" required>
         <label for="schoolName">Nome da escola:</label>
-        <input type="text" id="schoolName" name="schoolName" required placeholder="Ex.: Mater Dei">
+        <input type="text" id="schoolName" name="schoolName" required placeholder="Ex.: Escola Alpha">
       </fieldset>
       <fieldset>
         <legend>Pontuações e Fotos</legend>
@@ -40,6 +39,19 @@
           </label>
           <label>Fotos (até 3):
             <input type="file" accept="image/*" capture="environment" name="professores_photos" multiple>
+          </label>
+        </div>
+
+        <div class="criterion" data-crit="alunos">
+          <h3>Alunos por sala</h3>
+          <label>Nota:
+            <input type="number" min="1" max="10" name="alunos_score" required size="3" style="width:4rem;">
+          </label>
+          <label>Comentário:
+            <textarea name="alunos_comment" rows="3" placeholder="Escreva suas observações"></textarea>
+          </label>
+          <label>Fotos (até 3):
+            <input type="file" accept="image/*" capture="environment" name="alunos_photos" multiple>
           </label>
         </div>
         <div class="criterion" data-crit="metodo">
@@ -78,6 +90,32 @@
             <input type="file" accept="image/*" capture="environment" name="limpeza_photos" multiple>
           </label>
         </div>
+
+        <div class="criterion" data-crit="convivencia">
+          <h3>Espaço de convivência</h3>
+          <label>Nota:
+            <input type="number" min="1" max="10" name="convivencia_score" required size="3" style="width:4rem;">
+          </label>
+          <label>Comentário:
+            <textarea name="convivencia_comment" rows="3" placeholder="Escreva suas observações"></textarea>
+          </label>
+          <label>Fotos (até 3):
+            <input type="file" accept="image/*" capture="environment" name="convivencia_photos" multiple>
+          </label>
+        </div>
+
+        <div class="criterion" data-crit="esportes">
+          <h3>Espaço para esportes</h3>
+          <label>Nota:
+            <input type="number" min="1" max="10" name="esportes_score" required size="3" style="width:4rem;">
+          </label>
+          <label>Comentário:
+            <textarea name="esportes_comment" rows="3" placeholder="Escreva suas observações"></textarea>
+          </label>
+          <label>Fotos (até 3):
+            <input type="file" accept="image/*" capture="environment" name="esportes_photos" multiple>
+          </label>
+        </div>
         <div class="criterion" data-crit="atividades">
           <h3>Atividades extracurriculares</h3>
           <label>Nota:
@@ -114,6 +152,45 @@
             <input type="file" accept="image/*" capture="environment" name="custos_photos" multiple>
           </label>
         </div>
+
+        <div class="criterion" data-crit="bolsas">
+          <h3>Programas de bolsas</h3>
+          <label>Nota:
+            <input type="number" min="1" max="10" name="bolsas_score" required size="3" style="width:4rem;">
+          </label>
+          <label>Comentário:
+            <textarea name="bolsas_comment" rows="3" placeholder="Escreva suas observações"></textarea>
+          </label>
+          <label>Fotos (até 3):
+            <input type="file" accept="image/*" capture="environment" name="bolsas_photos" multiple>
+          </label>
+        </div>
+
+        <div class="criterion" data-crit="materiais">
+          <h3>Valor do material didático</h3>
+          <label>Nota:
+            <input type="number" min="1" max="10" name="materiais_score" required size="3" style="width:4rem;">
+          </label>
+          <label>Comentário:
+            <textarea name="materiais_comment" rows="3" placeholder="Escreva suas observações"></textarea>
+          </label>
+          <label>Fotos (até 3):
+            <input type="file" accept="image/*" capture="environment" name="materiais_photos" multiple>
+          </label>
+        </div>
+
+        <div class="criterion" data-crit="cantina">
+          <h3>Cantina</h3>
+          <label>Nota:
+            <input type="number" min="1" max="10" name="cantina_score" required size="3" style="width:4rem;">
+          </label>
+          <label>Comentário:
+            <textarea name="cantina_comment" rows="3" placeholder="Escreva suas observações"></textarea>
+          </label>
+          <label>Fotos (até 3):
+            <input type="file" accept="image/*" capture="environment" name="cantina_photos" multiple>
+          </label>
+        </div>
         <div class="criterion" data-crit="seguranca">
           <h3>Segurança</h3>
           <label>Nota:
@@ -136,6 +213,13 @@
           </label>
           <label>Fotos (até 3):
             <input type="file" accept="image/*" capture="environment" name="reputacao_photos" multiple>
+          </label>
+        </div>
+
+        <div class="criterion" data-crit="observacoes">
+          <h3>Observações gerais</h3>
+          <label>Comentário:
+            <textarea name="observacoes_comment" rows="4" placeholder="Escreva qualquer observação adicional sobre a escola"></textarea>
           </label>
         </div>
       </fieldset>
