--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="criterion">
-      <label for="periodo">Período de Aula (pontue o que for mais adequado)</label>
+      <label for="periodo">Horário de Aula</label>
       <input type="number" id="periodo" name="periodo">
       <textarea name="comentario_periodo" placeholder="Comentários..."></textarea>
       <input type="file" name="foto_periodo" accept="image/*" capture="environment" multiple>
