--- a/index.html
+++ b/index.html
@@ -85,22 +85,18 @@
 
   <script>
     const criterios = [
-      "Localização",
-      "Segurança",
+      "Horário de aula",
       "Infraestrutura",
-      "Limpeza Geral",
-      "Material Didático",
-      "Período de Aula",
-      "Alunos por Sala",
-      "Espaço de Convivência",
-      "Espaço para Esportes",
-      "Programas de Bolsas",
-      "Cantina",
-      "Valor Material Didático",
-      "Projeto Pedagógico",
-      "Disciplinas Extras",
-      "Tecnologia e Inovação",
-      "Atendimento da Equipe",
+      "Limpeza geral",
+      "Espaço de convivência",
+      "Espaço para esportes",
+      "Programa de bolsas",
+      "Valor do material didático",
+      "Alunos por sala",
+      "Segurança",
+      "Localização",
+      "Proposta pedagógica",
+      "Aulas Extras",
       "Reputação"
     ];
 
